fluxo de login atualizado front-end

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button type="submit" class="btn-padrao">Entrar</button>
             </form>
             <div class="links-login">
-                <a href="cadastro.html" class="cadastro-link">Cadastre-se</a>
+                <a href="cadastroUsuario.html" class="cadastro-link">Cadastre-se</a>
                 <a href="recuperacaoSenha.html" class="esqueceu-link">Esqueceu a senha?</a>
             </div>
         </section>
