--- a/recuperacaoSenha.html
+++ b/recuperacaoSenha.html
@@ -1,34 +1,27 @@
-<html lang="pt-BR">
-
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recuperação de Senha</title>
-    <link rel="stylesheet" href="assets/css/style.css">
-
+    <link rel="stylesheet" href="assets/css/style2.css">
 </head>
-
 <body>
-    <main class="main-flex" role="main">
-        <div class="card-padrao" id="card-recuperaSenha">
-            <h2>Recuperação de Senha</h2>
-            <p class="texto-instrucao">
+    <div class="main-flex">
+        <section class="card-padrao card-recuperacao">
+            <h1 class="login-titulo">Recuperação de Senha</h1>
+            <p class="texto-instrucao" style="color: #555; font-size: 1rem; margin-bottom: 18px;">
                 Informe seu e-mail para receber o link de recuperação de senha.
             </p>
-            <form method="POST" >
-                <label for="email" >E-mail</label>
-                <input type="email" id="email" name="email" required placeholder="seuemail@exemplo.com"
-                    class="input-padrao" aria-required="true"  />
-                <button type="submit" class="btn-padrao" id="btn-linkRecuperacao">
-                    Enviar link de recuperação
-                </button>
+            <form class="form-login">
+                <label for="email" class="label-login">E-mail</label>
+                <input type="email" id="email" name="email" class="input-padrao" required placeholder="seuemail@exemplo.com" autocomplete="username">
+                <button type="submit" class="btn-padrao">Enviar link</button>
             </form>
-            <a href="index.html" class="link-voltar" aria-label="Voltar para a página de login">
-                Voltar para o login
-            </a>
-
-        </div>
-    </main>
+            <div class="links-login" style="justify-content: flex-start;">
+                <a href="index.html" class="esqueceu-link">Voltar ao login</a>
+            </div>
+        </section>
+    </div>
 </body>
-
 </html>
