--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Biblioteca</title>
     <link rel="stylesheet" href="assets/css/style2.css">
+    <link rel="stylesheet"
+         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
     <div class="main-flex">
@@ -19,7 +21,7 @@
                 <div class="senha-container">
                     <input type="password" id="senha" name="senha" class="input-padrao" autocomplete="current-password" required>
                     <button type="button" class="toggle-btn" id="toggleSenha">
-                        <img src="assets/icon/visivel.svg" alt="Mostrar senha" class="toggle-icon">
+                        <span class="material-symbols-outlined">visibility</span>
                     </button>
                 </div>
                 <button type="submit" class="btn-padrao">Entrar</button>
