--- a/recuperacaoSenha.html
+++ b/recuperacaoSenha.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <div class="main-flex">
-        <section class="card-padrao card-recuperacao">
+        <section class="card-padrao" >
             <h1 class="login-titulo">Recuperação de Senha</h1>
             <p class="texto-instrucao" style="color: #555; font-size: 1rem; margin-bottom: 18px;">
                 Informe seu e-mail para receber o link de recuperação de senha.
             </p>
             <form class="form-login">
                 <label for="email" class="label-login">E-mail</label>
-                <input type="email" id="email" name="email" class="input-padrao" required placeholder="seuemail@exemplo.com" autocomplete="username">
+                <input type="email" id="email" name="email" class="input-padrao" required  autocomplete="username">
                 <button type="submit" class="btn-padrao">Enviar link</button>
             </form>
             <div class="links-login" style="justify-content: flex-start;">
