--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -1,142 +1,177 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Barra de Navegação Lateral</title>
-    <!-- Font Awesome CDN para ícones -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Navbar Colapsável</title>
+<link rel="stylesheet"
+  href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<style>
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #a366ff; /* fundo roxo claro */
+    padding: 0.5rem 1rem;
+    position: relative;
+}
+.navbar-brand {
+    color: #8000ff; /* texto roxo forte */
+    font-weight: bold;
+    font-size: 1.1rem;
+}
+.navbar-toggle {
+    display: block;   /* aparece no mobile */
+    font-size: 2rem;
+    color: #8000ff;  /* roxo forte */
+    cursor: pointer;
+}
+.menu-dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    background: #ffffff;
+    border-bottom: 1px solid #eee;
+    z-index: 100;
+    display: none;
+    flex-direction: column;
+    padding: 18px 0;
+    animation: fadeIn 0.25s;
+}
+.menu-dropdown.show {
+    display: flex;
+}
+.menu-lista {
+    list-style: none;
+    padding: 0 0 0 18px;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
+}
+.menu-item {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    color: #8000ff; /* roxo forte */
+    font-size: 1.08rem;
+    font-weight: 500;
+    cursor: pointer;
+    transition: background 0.2s, color 0.2s;
+    border-radius: 8px;
+    padding: 6px 8px 6px 4px;
+}
+.menu-item:hover, .menu-item.active {
+    background: #e0ccff; /* hover roxo suave */
+    color: #8000ff;
+}
+.menu-icon {
+    font-size: 1.3rem;
+}
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(-10px);}
+    to { opacity: 1; transform: translateY(0);}
+}
+
+/* --- DESKTOP --- */
+@media (min-width: 769px) {
+    .navbar-toggle {
+        display: none; /* esconde hambúrguer */
+    }
+    .menu-dropdown {
+        position: static;
+        flex: 1;
+        display: block; /* sempre visível */
+        background: transparent;
+        border: none;
+        box-shadow: none;
+        padding: 0;
+    }
+    .menu-lista {
+        flex-direction: row;
+        justify-content: flex-end;
+        gap: 20px;
+        padding: 0;
+    }
+    .menu-item {
+        border: none;
+        padding: 8px 12px;
+        background: transparent;
+        color: #8000ff; /* mantém cor de destaque */
+    }
+    .menu-item .menu-icon {
+        display: none; /* remove ícones no desktop */
+    }
+    .menu-item.active {
+        border-bottom: 3px solid #8000ff;
+        background: transparent;
+        color: #8000ff;
+    }
+    .menu-item:hover {
+        background: rgba(163, 102, 255, 0.2);
+        color: #8000ff;
+    }
+}
+</style>
 </head>
-
 <body>
+<nav class="navbar">
+    <div class="navbar-brand">Menu</div>
+    <span class="navbar-toggle" id="navbarToggle">&#9776;</span>
+    <div class="menu-dropdown" id="menuDropdown">
+        <ul class="menu-lista">
+            <li class="menu-item active">
+                <span class="material-symbols-outlined menu-icon">menu_book</span>
+                Buscar livros
+            </li>
+            <li class="menu-item">
+                <span class="material-symbols-outlined menu-icon">library_books</span>
+                Meus livros
+            </li>
+            <li class="menu-item">
+                <span class="material-symbols-outlined menu-icon">account_circle</span>
+                Meus Dados
+            </li>
+            <li class="menu-item">
+                <span class="material-symbols-outlined menu-icon">arrow_back</span>
+                Sair
+            </li>
+        </ul>
+    </div>
+</nav>
+<script>
+const toggle = document.getElementById('navbarToggle');
+const menu = document.getElementById('menuDropdown');
+const menuItems = document.querySelectorAll('.menu-item');
 
-    <!-- conteudo main -->
-    <main class="container-main">
-        <form aria-label="Formulário de busca de livros" id="searchForm">
-            <input aria-label="Campo de busca de livros" autocomplete="off" id="searchInput"
-                placeholder="Buscar livros..." type="search" class="input-padrao" />
-            <select aria-label="Selecionar campo para busca" id="searchField" class="input-padrao">
-                <option selected value="title">Nome</option>
-                <option value="author">Autor</option>
-                <option value="category">Categoria</option>
-            </select>
-            <button aria-label="Botão para executar busca" id="searchButton" type="submit" class="btn-padrao btn-full">
-                Buscar
-            </button>
-        </form>
+// Abrir/fechar no mobile
+toggle.addEventListener('click', (event) => {
+    menu.classList.toggle('show');
+    event.stopPropagation();
+});
 
-        <div id="bookGrid">
-            <article aria-label="Livro O Senhor dos Anéis, gêneros Fantasia e Aventura" class="book-card "
-                data-author="J.R.R. Tolkien" data-category="Fantasia,Aventura" data-title="O Senhor dos Anéis"
-                role="article" tabindex="0">
-                <img alt="Capa do livro O Senhor dos Anéis, uma ilustração de fantasia com anéis dourados brilhantes e uma paisagem épica ao fundo"
-                    loading="lazy"
-                    src="https://storage.googleapis.com/a1aa/image/bce2b2a8-89b2-4e34-cded-70c0616e21b8.jpg"
-                    width="180" />
-                <div class="book-content">
-                    <h3>O Senhor dos Anéis</h3>
-                    <p class="author">J.R.R. Tolkien</p>
-                    <div class="tags">
-                        <span class="book-tag" tabindex="0">Fantasia</span>
-                        <span class="book-tag" tabindex="0">Aventura</span>
-                    </div>
-                </div>
-            </article>
-            <article aria-label="Livro O Senhor dos Anéis, gêneros Fantasia e Aventura" class="book-card "
-                data-author="J.R.R. Tolkien" data-category="Fantasia,Aventura" data-title="O Senhor dos Anéis"
-                role="article" tabindex="0">
-                <img alt="Capa do livro O Senhor dos Anéis, uma ilustração de fantasia com anéis dourados brilhantes e uma paisagem épica ao fundo"
-                    loading="lazy"
-                    src="https://storage.googleapis.com/a1aa/image/bce2b2a8-89b2-4e34-cded-70c0616e21b8.jpg"
-                    width="180" />
-                <div class="book-content">
-                    <h3>O Senhor dos Anéis</h3>
-                    <p class="author">J.R.R. Tolkien</p>
-                    <div class="tags">
-                        <span class="book-tag" tabindex="0">Fantasia</span>
-                        <span class="book-tag" tabindex="0">Aventura</span>
-                    </div>
-                </div>
-            </article>
-            <article aria-label="Livro O Senhor dos Anéis, gêneros Fantasia e Aventura" class="book-card "
-                data-author="J.R.R. Tolkien" data-category="Fantasia,Aventura" data-title="O Senhor dos Anéis"
-                role="article" tabindex="0">
-                <img alt="Capa do livro O Senhor dos Anéis, uma ilustração de fantasia com anéis dourados brilhantes e uma paisagem épica ao fundo"
-                    loading="lazy"
-                    src="https://storage.googleapis.com/a1aa/image/bce2b2a8-89b2-4e34-cded-70c0616e21b8.jpg"
-                    width="180" />
-                <div class="book-content">
-                    <h3>O Senhor dos Anéis</h3>
-                    <p class="author">J.R.R. Tolkien</p>
-                    <div class="tags">
-                        <span class="book-tag" tabindex="0">Fantasia</span>
-                        <span class="book-tag" tabindex="0">Aventura</span>
-                    </div>
-                </div>
-            </article>
-            <article aria-label="Livro O Senhor dos Anéis, gêneros Fantasia e Aventura" class="book-card "
-                data-author="J.R.R. Tolkien" data-category="Fantasia,Aventura" data-title="O Senhor dos Anéis"
-                role="article" tabindex="0">
-                <img alt="Capa do livro O Senhor dos Anéis, uma ilustração de fantasia com anéis dourados brilhantes e uma paisagem épica ao fundo"
-                    loading="lazy"
-                    src="https://storage.googleapis.com/a1aa/image/bce2b2a8-89b2-4e34-cded-70c0616e21b8.jpg"
-                    width="180" />
-                <div class="book-content">
-                    <h3>O Senhor dos Anéis</h3>
-                    <p class="author">J.R.R. Tolkien</p>
-                    <div class="tags">
-                        <span class="book-tag" tabindex="0">Fantasia</span>
-                        <span class="book-tag" tabindex="0">Aventura</span>
-                    </div>
-                </div>
-            </article>
-            <article aria-label="Livro O Senhor dos Anéis, gêneros Fantasia e Aventura" class="book-card "
-                data-author="J.R.R. Tolkien" data-category="Fantasia,Aventura" data-title="O Senhor dos Anéis"
-                role="article" tabindex="0">
-                <img alt="Capa do livro O Senhor dos Anéis, uma ilustração de fantasia com anéis dourados brilhantes e uma paisagem épica ao fundo"
-                    loading="lazy"
-                    src="https://storage.googleapis.com/a1aa/image/bce2b2a8-89b2-4e34-cded-70c0616e21b8.jpg"
-                    width="180" />
-                <div class="book-content">
-                    <h3>O Senhor dos Anéis</h3>
-                    <p class="author">J.R.R. Tolkien</p>
-                    <div class="tags">
-                        <span class="book-tag" tabindex="0">Fantasia</span>
-                        <span class="book-tag" tabindex="0">Aventura</span>
-                    </div>
-                </div>
-            </article>
-            <article aria-label="Livro O Senhor dos Anéis, gêneros Fantasia e Aventura" class="book-card "
-                data-author="J.R.R. Tolkien" data-category="Fantasia,Aventura" data-title="O Senhor dos Anéis"
-                role="article" tabindex="0">
-                <img alt="Capa do livro O Senhor dos Anéis, uma ilustração de fantasia com anéis dourados brilhantes e uma paisagem épica ao fundo"
-                    loading="lazy"
-                    src="https://storage.googleapis.com/a1aa/image/bce2b2a8-89b2-4e34-cded-70c0616e21b8.jpg"
-                    width="180" />
-                <div class="book-content">
-                    <h3>O Senhor dos Anéis</h3>
-                    <p class="author">J.R.R. Tolkien</p>
-                    <div class="tags">
-                        <span class="book-tag" tabindex="0">Fantasia</span>
-                        <span class="book-tag" tabindex="0">Aventura</span>
-                    </div>
-                </div>
-            </article>
+// Fechar ao clicar fora
+document.addEventListener('click', (event) => {
+    if (!menu.contains(event.target) && !toggle.contains(event.target)) {
+        menu.classList.remove('show');
+    }
+});
 
-        </div>
-
-    </main>
-
-    <script>
-        document.querySelectorAll(".book-card").forEach(card => {
-            card.addEventListener("click", () => {
-                window.location.href = "detalhesLivro.html";
-            });
-        });
-    </script>
-
+// Destacar item ativo
+menuItems.forEach(item => {
+    item.addEventListener('click', () => {
+        menuItems.forEach(i => i.classList.remove('active'));
+        item.classList.add('active');
+        menu.classList.remove('show'); // fecha ao clicar
+    });
+});
+</script>
 </body>
-
 </html>
