--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -7,196 +7,8 @@
     <title>Menu Responsivo Biblioteca</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <style>
-        :root {
-            --cor-primaria: #8000ff;
-            --cor-bg-menu: #fff;
-            --cor-icone: #535353;
-            --cor-hover: #f3eaff;
-            --cor-borda: #eee;
-            --radius-menu: 12px;
-            --shadow-menu: 1px 0 6px rgba(0, 0, 0, 0.07);
-            --menu-width-mobile: 80vw;
-            --menu-width-desktop: 260px;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Segoe UI', Arial, sans-serif;
-            background: #fff;
-        }
-
-        .top-bar {
-            width: 100%;
-            height: 44px;
-            background: var(--cor-primaria);
-            display: flex;
-            align-items: center;
-            position: relative;
-        }
-
-        .menu-abrir {
-            color: #fff;
-            font-size: 2rem;
-            cursor: pointer;
-            display: block;
-            margin-left: 18px;
-        }
-
-        .menu-lista-topbar {
-            display: none;
-        }
-
-        .menu-lista-topbar .menu-item {
-            display: none;
-        }
-
-        .menu-lateral {
-            position: fixed;
-            top: 0;
-            left: 0;
-            height: 100vh;
-            width: var(--menu-width-mobile);
-            max-width: 320px;
-            background: var(--cor-bg-menu);
-            box-shadow: var(--shadow-menu);
-            border-right: 1px solid var(--cor-borda);
-            z-index: 1000;
-            display: flex;
-            flex-direction: column;
-            padding: 0;
-            transform: translateX(-100%);
-            transition: transform 0.3s;
-        }
-
-        .menu-lateral.aberto {
-            transform: translateX(0);
-        }
-
-        .menu-topo {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 0 24px;
-            height: 44px;
-            box-sizing: border-box;
-        }
-
-        #menu-escrita {
-            font-weight: 600;
-            color: #535353;
-            text-transform: uppercase;
-            display: flex;
-            align-items: center;
-            margin: 0;
-            height: 100%;
-        }
-
-        .menu-fechar {
-            font-size: 1.5rem;
-            color: var(--cor-primaria);
-            cursor: pointer;
-            margin: 0;
-            height: 100%;
-            display: flex;
-            align-items: center;
-        }
-
-        .menu-separador {
-            border: none;
-            border-top: 1px solid #eee;
-            margin: 0px 0px 12px 0px;
-        }
-
-        .menu-lista {
-            list-style: none;
-            padding: 0 0 0 24px;
-            margin: 0;
-            display: flex;
-            flex-direction: column;
-            gap: 22px;
-        }
-
-        .menu-item {
-            display: flex;
-            align-items: center;
-            gap: 12px;
-            color: var(--cor-icone);
-            font-size: 1.08rem;
-            font-weight: 500;
-            cursor: pointer;
-            border-radius: 8px;
-            padding: 6px 8px 6px 4px;
-        }
-
-        .menu-item.active {
-            background: var(--cor-hover);
-            color: var(--cor-primaria);
-            margin-left: 0;
-            margin-right: 24px;
-            padding-right: 24px;
-            width: auto;
-        }
-
-        .menu-item:hover {
-            background: #5353531f;
-            color: var(--cor-primaria);
-            margin-left: 0;
-            margin-right: 24px;
-            padding-right: 24px;
-            width: auto;
-        }
-
-        .menu-icon {
-            font-size: 1.5rem;
-        }
-
-        @media (min-width: 900px) {
-            .top-bar {
-                display: flex;
-            }
-
-            .menu-abrir {
-                display: none !important;
-            }
-
-            .menu-lateral {
-                display: none !important;
-            }
-
-            .menu-lista-topbar {
-                display: flex;
-                margin-left: auto;
-                align-items: center;
-                flex-direction: row;
-                gap: 18px;
-                padding-right: 30px;
-            }
-
-            .menu-lista-topbar .menu-item {
-                display: flex;
-                align-items: center;
-                color: #fff;
-                cursor: pointer;
-                color: var(--cor-bg-menu);
-                margin: 0;
-                padding: 4px 12px;
-                font-weight: 500;
-            }
-
-            .menu-lista-topbar .menu-item.active,
-            .menu-lista-topbar .menu-item:hover {
-                background: rgb(255, 255, 255);
-                color: var(--cor-primaria);
-            }
-
-            .menu-icon {
-                display: none;
-            }
-
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/style2.css">
 </head>
 
 <body>
@@ -247,20 +59,85 @@
             </li>
         </ul>
     </nav>
-    <script>
-        const btnAbrir = document.getElementById('btnAbrirMenu');
-        const btnFechar = document.getElementById('btnFecharMenu');
-        const menu = document.getElementById('menuLateral');
-        btnAbrir && btnAbrir.addEventListener('click', () => menu.classList.add('aberto'));
-        btnFechar && btnFechar.addEventListener('click', () => menu.classList.remove('aberto'));
-        document.addEventListener('click', function (e) {
-            if (window.innerWidth < 900) {
-                if (!menu.contains(e.target) && !btnAbrir.contains(e.target)) {
-                    menu.classList.remove('aberto');
-                }
-            }
-        });
-    </script>
+    <!-- ...existing code... -->
+    <main class="conteudo-home">
+        <section class="busca-livros">
+            <form class="form-busca">
+                <input type="text" class="input-busca" placeholder="Buscar por título">
+                <button type="submit" class="btn-busca">
+                    <span class="material-symbols-outlined">search</span>
+                </button>
+            </form>
+        </section>
+
+        <section class="secao-livros">
+            <div class="secao-topo">
+                <h2 class="secao-titulo">Nome da seção</h2>
+                <a href="#" class="secao-vermais">
+                    ver mais <span class="material-symbols-outlined"
+                        style="font-size:1rem;vertical-align:middle;">chevron_right</span>
+                </a>
+            </div>
+            <div class="livros-grid">
+                <div class="livro-card">
+                    <div class="livro-capa"></div>
+                    <div class="livro-info">
+                        <div class="livro-titulo">Nome do livro</div>
+                        <div class="livro-autor">Autor do livro</div>
+                    </div>
+                </div>
+                <div class="livro-card">
+                    <div class="livro-capa"></div>
+                    <div class="livro-info">
+                        <div class="livro-titulo">Nome do livro</div>
+                        <div class="livro-autor">Autor do livro</div>
+                    </div>
+                </div>
+                <div class="livro-card">
+                    <div class="livro-capa"></div>
+                    <div class="livro-info">
+                        <div class="livro-titulo">Nome do livro</div>
+                        <div class="livro-autor">Autor do livro</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Repita a seção para outras categorias -->
+        <section class="secao-livros">
+            <div class="secao-topo">
+                <h2 class="secao-titulo">Nome da seção</h2>
+                <a href="#" class="secao-vermais">
+                    ver mais <span class="material-symbols-outlined"
+                        style="font-size:1rem;vertical-align:middle;">chevron_right</span>
+                </a>
+            </div>
+            <div class="livros-grid">
+                <div class="livro-card">
+                    <div class="livro-capa"></div>
+                    <div class="livro-info">
+                        <div class="livro-titulo">Nome do livro</div>
+                        <div class="livro-autor">Autor do livro</div>
+                    </div>
+                </div>
+                <div class="livro-card">
+                    <div class="livro-capa"></div>
+                    <div class="livro-info">
+                        <div class="livro-titulo">Nome do livro</div>
+                        <div class="livro-autor">Autor do livro</div>
+                    </div>
+                </div>
+                <div class="livro-card">
+                    <div class="livro-capa"></div>
+                    <div class="livro-info">
+                        <div class="livro-titulo">Nome do livro</div>
+                        <div class="livro-autor">Autor do livro</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="assets/js/script.js"></script>
 </body>
 
 </html>
