inicio pag de emprestimos do usuario

--- a/usuarioLivroEmprestar.html
+++ b/usuarioLivroEmprestar.html
@@ -9,7 +9,6 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/style2.css">
-
 </head>
 
 <body class="body-cor">
@@ -67,19 +66,16 @@
                 <div class="info-livro-detalhes">
                     <h2 class="info-livro-nome">Nome do Livro</h2>
                     <div class="info-livro-autor">Autor do livro</div>
-                    <div class="info-livro-generos">
-                        <span class="info-livro-genero">gênero</span>
-                        <span class="info-livro-genero">gênero</span>
+                    <div class="emprestar-datas">
+                        <strong>Data de empréstimo:</strong> 00/00/0000<br>
+                        <strong>Data de devolução:</strong> 00/00/0000
                     </div>
                 </div>
             </div>
-            <div class="info-livro-descricao">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                embarrassing hidden.
+            <div class="emprestar-info">
+                O tempo de retirada do livro na biblioteca é de 8 horas, após o período o empréstimo será cancelado.
             </div>
-            <button class="btn-padrao">Emprestar Livro</button>
+            <button class="btn-padrao">Concluir</button>
         </main>
     </div>
     <script src="assets/js/script.js"></script>
