emprestar livros ok

--- a/usuarioLivroEmprestar.html
+++ b/usuarioLivroEmprestar.html
@@ -59,7 +59,7 @@
             </li>
         </ul>
     </nav>
-    <div class="centralizar">
+    <div class="centrar-conteudo">
         <main class="info-livro-container">
             <div class="info-livro-topo-flex">
                 <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-livro-capa">
@@ -75,7 +75,7 @@
             <div class="emprestar-info">
                 O tempo de retirada do livro na biblioteca é de 8 horas, após o período o empréstimo será cancelado.
             </div>
-            <button class="btn-padrao">Concluir</button>
+            <button class="btn-padrao info-livro-btn">Concluir</button>
         </main>
     </div>
     <script src="assets/js/script.js"></script>
