--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body class="body-cor">
+<body class="body-cor body-flex">
     <div class="top-bar">
         <span class="material-symbols-outlined menu-abrir" id="btnAbrirMenu" title="Abrir menu">menu</span>
         <ul class="menu-lista menu-lista-topbar">
@@ -60,7 +60,7 @@
             </li>
         </ul>
     </nav>
-    <div class="centralizar">
+    <div class="centrar-conteudo">
         <main class="info-livro-container">
             <div class="info-livro-topo-flex">
                 <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-livro-capa">
@@ -79,7 +79,7 @@
                 believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
                 embarrassing hidden.
             </div>
-            <button class="btn-padrao">Emprestar Livro</button>
+            <button class=" btn-padrao info-livro-btn">Emprestar Livro</button>
         </main>
     </div>
     <script src="assets/js/script.js"></script>
