--- a/recuperacaoSenha.html
+++ b/recuperacaoSenha.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recuperação de Senha</title>
-    <link rel="stylesheet" href="assets/css/style2.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
 </head>
 <body>
     <div class="main-flex">
