--- a/cadastroUsuario.html
+++ b/cadastroUsuario.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="main-flex">
+    <div class="tela-toda flex">
         <section class="card-padrao">
             <h1 class="login-titulo">Cadastro</h1>
             <form class="form-login">
@@ -33,13 +33,7 @@
                     </button>
                 </div>
 
-                <label for="confirmaSenha" class="label-login">Confirme a senha</label>
-                <div class="senha-container">
-                    <input type="password" id="confirmaSenha" name="confirmaSenha" class="input-padrao"
-                        autocomplete="new-password" required>
-                    <button type="button" class="toggle-btn" id="toggleConfirmaSenha">
-                        <span class="material-symbols-outlined">visibility</span> </button>
-                </div>
+                
 
                 <button type="submit" class="btn-padrao">Salvar</button>
             </form>
