--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
          href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
-    <div class="main-flex">
+    <div class="tela-toda flex">
+         <div class="backdrop" id="backdrop"></div>
+         
+         <!-- Card de Login -->
         <section class="card-padrao">
             <h1 class="login-titulo">Login</h1>
             <form class="form-login">
