--- a/recuperacaoSenha.html
+++ b/recuperacaoSenha.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/css/menu.css">
 </head>
 <body>
-    <div class="main-flex">
+    <div class="tela-toda flex">
         <section class="card-padrao" >
             <h1 class="login-titulo">Recuperação de Senha</h1>
             <p class="texto-instrucao" style="color: #555; font-size: 1rem; margin-bottom: 18px;">
