--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -8,78 +8,85 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/menu.css">
-    <link rel="stylesheet" href="assets/css/style2.css">
+
 
 </head>
 
-<body class="body-cor body-flex">
-    <div class="top-bar">
-        <span class="material-symbols-outlined menu-abrir" id="btnAbrirMenu" title="Abrir menu">menu</span>
-        <ul class="menu-lista menu-lista-topbar">
-            <li class="menu-item active">
-                <span class="material-symbols-outlined menu-icon">menu_book</span>
-                Buscar livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">library_books</span>
-                Meus livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">account_circle</span>
-                Meus Dados
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">arrow_back</span>
-                Sair
-            </li>
-        </ul>
-    </div>
-
-    <nav class="menu-lateral" id="menuLateral">
-        <div id="menuTopo" class="menu-topo">
-            <span id="menu-escrita">Menu</span>
-            <span class="material-symbols-outlined menu-fechar" id="btnFecharMenu" title="Fechar menu">close</span>
+<body>
+    <header class="topbar" role="banner">
+        <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
+            <span class="material-symbols-outlined">menu</span>
+        </button>
+        <div class="brand">
+            <span>Biblioteca</span>
         </div>
-        <hr class="menu-separador">
-        <ul class="menu-lista">
-            <li class="menu-item active">
-                <span class="material-symbols-outlined menu-icon">menu_book</span>
-                Buscar livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">library_books</span>
-                Meus livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">account_circle</span>
-                Meus Dados
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">arrow_back</span>
-                Sair
-            </li>
-        </ul>
-    </nav>
-    <div class="centrar-conteudo">
-        <main class="info-livro-container">
-            <div class="info-livro-topo-flex">
-                <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-livro-capa">
-                <div class="info-livro-detalhes">
-                    <h2 class="info-livro-nome">Nome do Livro</h2>
-                    <div class="info-livro-autor">Autor do livro</div>
-                    <div class="info-livro-generos">
-                        <span class="info-livro-genero">gênero</span>
-                        <span class="info-livro-genero">gênero</span>
+    </header>
+
+    <div class="layout">
+        <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
+            <div class="nav-group">
+                <a class="nav-item active" href="#home">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Home</span>
+                </a>
+            </div>
+
+            <div class="nav-group">
+                <a class="nav-item " href="#buscar-livros">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Buscar livros</span>
+                </a>
+            </div>
+
+            <div class="nav-group">
+                <a class="nav-item " href="#meus-livros">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Meus livros</span>
+                </a>
+            </div>
+
+            <div class="nav-group">
+                <a class="nav-item" href="#meus-dados">
+                    <span class="material-symbols-outlined">group</span>
+                    <span>Meus Dados</span>
+                </a>
+            </div>
+            <div class="nav-group">
+                <a class="nav-item" href="#meus-dados">
+                    <span class="material-symbols-outlined">logout</span>
+                    <span>Sair</span>
+                </a>
+            </div>
+
+        </nav>
+
+        <div class="backdrop" id="backdrop"></div>
+
+        <!-- ...existing code... -->
+        <main class="content " role="main">
+            <div class="info-livro-container">
+                <div class="info-livro-topo-flex">
+                    <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-livro-capa">
+                    <div class="info-livro-detalhes">
+                        <h2 class="info-livro-nome">Nome do Livro</h2>
+                        <div class="info-livro-autor">Autor do livro</div>
+                        <div class="info-livro-generos">
+                            <span class="info-livro-genero">gênero</span>
+                            <span class="info-livro-genero">gênero</span>
+                        </div>
                     </div>
                 </div>
+                <div class="info-livro-descricao">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't
+                    anything
+                    embarrassing hidden.
+                </div>
+                <div class="container-btn">
+                    <button class=" btn-padrao info-livro-btn">Emprestar Livro</button>
+                </div>
             </div>
-            <div class="info-livro-descricao">
-                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour, or randomised words which don't look even slightly
-                believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything
-                embarrassing hidden.
-            </div>
-            <button class=" btn-padrao info-livro-btn">Emprestar Livro</button>
         </main>
     </div>
     <script src="assets/js/script.js"></script>
