--- a/recuperacaoSenha.html
+++ b/recuperacaoSenha.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recuperação de Senha</title>
     <link rel="stylesheet" href="assets/css/menu.css">
 </head>
+
 <body>
-    <div class="tela-toda flex">
-        <section class="card-padrao" >
-            <h1 class="login-titulo">Recuperação de Senha</h1>
+    <div class="content-full flex">
+        <!-- Card de Recuperação -->
+        <section class="card card-login">
+            <h1 class="title-login">Recuperação de Senha</h1>
             <p class="texto-instrucao" style="color: #555; font-size: 1rem; margin-bottom: 18px;">
                 Informe seu e-mail para receber o link de recuperação de senha.
             </p>
+            <!-- formulario -->
             <form class="form-login">
                 <label for="email" class="label-login">E-mail</label>
-                <input type="email" id="email" name="email" class="input-padrao" required  autocomplete="username">
-                <button type="submit" class="btn-padrao">Enviar link</button>
+                <input type="email" id="email" name="email" class="input-primary input-login" required
+                    autocomplete="username">
+                <button type="submit" class="btn btn-login">Enviar link</button>
             </form>
+            <!-- fim do formulario -->
             <div class="links-login" style="justify-content: flex-start;">
-                <a href="index.html" class="esqueceu-link">Voltar ao login</a>
+                <a href="index.html" class="links">Voltar ao login</a>
             </div>
         </section>
+        <!-- fim card de recuperação -->
     </div>
 </body>
+
 </html>
