--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/css/menu.css">
 </head>
 
-<body>
+<body class="body-color">
     <!-- menu -->
     <header class="topbar" role="banner">
         <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
@@ -59,8 +59,8 @@
         <div class="backdrop" id="backdrop"></div>
         <!-- conteúdo -->
         <main class="content layout" role="main">
-            <div class="info-book-container">
-                <div class="info-book-topo-flex">
+            <div class=" info-book-container">
+                <div class="info-book-top-flex">
                     <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-book-cover">
                     <div class="info-book-details">
                         <h2 class="info-book-title">Nome do Livro</h2>
@@ -78,8 +78,9 @@
                     anything
                     embarrassing hidden.
                 </div>
-                <div class="btn-container">
-                    <button class="btn-padrao info-book-btn">Emprestar Livro</button>
+                <div class="empty-space"></div>
+                <div class= "btn-container">
+                    <button class="btn info-book-btn">Emprestar Livro</button>
                 </div>
             </div>
         </main>
