--- a/usuarioLivroEmprestar.html
+++ b/usuarioLivroEmprestar.html
@@ -8,74 +8,77 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="assets/css/menu.css">
-    <link rel="stylesheet" href="assets/css/style2.css">
 </head>
 
-<body class="body-cor">
-    <div class="top-bar">
-        <span class="material-symbols-outlined menu-abrir" id="btnAbrirMenu" title="Abrir menu">menu</span>
-        <ul class="menu-lista menu-lista-topbar">
-            <li class="menu-item active">
-                <span class="material-symbols-outlined menu-icon">menu_book</span>
-                Buscar livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">library_books</span>
-                Meus livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">account_circle</span>
-                Meus Dados
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">arrow_back</span>
-                Sair
-            </li>
-        </ul>
-    </div>
-
-    <nav class="menu-lateral" id="menuLateral">
-        <div id="menuTopo" class="menu-topo">
-            <span id="menu-escrita">Menu</span>
-            <span class="material-symbols-outlined menu-fechar" id="btnFecharMenu" title="Fechar menu">close</span>
+<body class="body-color">
+    <!-- menu -->
+    <header class="topbar" role="banner">
+        <button class="hamburger" aria-label="Abrir menu" aria-controls="sidebar" aria-expanded="false">
+            <span class="material-symbols-outlined">menu</span>
+        </button>
+        <div class="brand">
+            <span>Biblioteca</span>
         </div>
-        <hr class="menu-separador">
-        <ul class="menu-lista">
-            <li class="menu-item active">
-                <span class="material-symbols-outlined menu-icon">menu_book</span>
-                Buscar livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">library_books</span>
-                Meus livros
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">account_circle</span>
-                Meus Dados
-            </li>
-            <li class="menu-item">
-                <span class="material-symbols-outlined menu-icon">arrow_back</span>
-                Sair
-            </li>
-        </ul>
-    </nav>
-    <div class="centrar-conteudo">
-        <main class="info-livro-container">
-            <div class="info-livro-topo-flex">
-                <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-livro-capa">
-                <div class="info-livro-detalhes">
-                    <h2 class="info-livro-nome">Nome do Livro</h2>
-                    <div class="info-livro-autor">Autor do livro</div>
-                    <div class="emprestar-datas">
-                        <strong>Data de empréstimo:</strong> 00/00/0000<br>
-                        <strong>Data de devolução:</strong> 00/00/0000
+    </header>
+    <!-- fim do menu -->
+    <div class="layout">
+        <!-- menu lateral -->
+        <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
+            <div class="nav-group">
+                <a class="nav-item active" href="#home">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Home</span>
+                </a>
+            </div>
+            <div class="nav-group">
+                <a class="nav-item " href="#buscar-livros">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Buscar livros</span>
+                </a>
+            </div>
+            <div class="nav-group">
+                <a class="nav-item " href="#meus-livros">
+                    <span class="material-symbols-outlined">home</span>
+                    <span>Meus livros</span>
+                </a>
+            </div>
+            <div class="nav-group">
+                <a class="nav-item" href="#meus-dados">
+                    <span class="material-symbols-outlined">group</span>
+                    <span>Meus Dados</span>
+                </a>
+            </div>
+            <div class="nav-group">
+                <a class="nav-item" href="#meus-dados">
+                    <span class="material-symbols-outlined">logout</span>
+                    <span>Sair</span>
+                </a>
+            </div>
+        </nav>
+        <!-- fim do menu lateral -->
+        <div class="backdrop" id="backdrop"></div>
+        <!-- conteúdo -->
+        <main class="content layout" role="main">
+            <div class=" info-book-container">
+                <div class="info-book-top-flex">
+                    <img src="assets/img/capa-livro.jpg" alt="Capa do Livro" class="info-book-cover">
+                    <div class="info-book-details">
+                        <h2 class="info-book-title">Nome do Livro</h2>
+                        <div class="info-book-author">Autor do livro</div>
+                        <div class="emprestar-datas">
+                            <strong>Data de empréstimo:</strong> 00/00/0000<br>
+                            <strong>Data de devolução:</strong> 00/00/0000
+                        </div>
                     </div>
                 </div>
+                <div class="info-book-loan-dates">
+                    O tempo de retirada do livro na biblioteca é de 8 horas, após o período o empréstimo será cancelado.
+                </div>
+                <div class="empty-space"></div>
+                <div class="btn-container">
+                    <button class="btn info-book-btn">Concluir</button>
+                </div>
             </div>
-            <div class="emprestar-info">
-                O tempo de retirada do livro na biblioteca é de 8 horas, após o período o empréstimo será cancelado.
-            </div>
-            <button class="btn-padrao info-livro-btn">Concluir</button>
         </main>
     </div>
     <script src="assets/js/script.js"></script>
