inciando as paginas de administrador

--- a/usuarioCadastro.html
+++ b/usuarioCadastro.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Biblioteca</title>
-    <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
+    <link rel="stylesheet" href="assets/css/global.css">
+    </head>
 
 <body>
     <div class="content-full flex">
@@ -34,7 +34,7 @@
                 <button type="submit" class="btn btn-login">Salvar</button>
             </form>
             <!-- fim do formulario -->
-            <div class="links-login" style="justify-content: flex-start;">
+            <div class="links-login">
                 <a href="index.html" class="links">Voltar ao login</a>
             </div>
         </section>
