--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Biblioteca</title>
-    <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="assets/css/global.css">
 </head>
 
 <body>
@@ -32,7 +32,7 @@
             </form>
             <!-- fim formulario -->
             <div class="links-login">
-                <a href="cadastroUsuario.html" class="links">Cadastre-se</a>
+                <a href="usuarioCadastro.html" class="links">Cadastre-se</a>
                 <a href="recuperacaoSenha.html" class="links">Esqueceu a senha?</a>
             </div>
         </section>
