--- a/recuperacaoSenha.html
+++ b/recuperacaoSenha.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Recuperação de Senha</title>
-    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/global.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
         <!-- Card de Recuperação -->
         <section class="card card-login">
             <h1 class="title-login">Recuperação de Senha</h1>
-            <p class="texto-instrucao" style="color: #555; font-size: 1rem; margin-bottom: 18px;">
+            <p class="text-instruction">
                 Informe seu e-mail para receber o link de recuperação de senha.
             </p>
             <!-- formulario -->
