--- a/usuarioHistorico.html
+++ b/usuarioHistorico.html
@@ -7,24 +7,8 @@
   <title>Meus Livros</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="assets/css/menu.css">
-  <style>
-    /* .historico-container {
-            max-width: 500px;
-            margin: 0 auto;
-            padding: 0 0 24px 0;
-        }
-
-        .historico-titulo {
-            text-align: center;
-            font-size: 1.15rem;
-            font-weight: 500;
-            color: #23395d;
-            margin: 32px 0 8px 0;
-            letter-spacing: 0.5px;
-            background-color: #ea4335;
-        } */
-  </style>
+  <link rel="stylesheet" href="assets/css/global.css">
+  <link rel="stylesheet" href="assets/css/usuario.css">
 </head>
 
 <body>
@@ -33,7 +17,7 @@
       <span class="material-symbols-outlined">menu</span>
     </button>
     <div class="brand">
-      <span>Biblioteca</span>
+      <span>Meus Livros</span>
     </div>
   </header>
   <!-- fim do menu -->
@@ -41,19 +25,13 @@
     <!-- menu lateral -->
     <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
       <div class="nav-group">
-        <a class="nav-item active" href="#home">
-          <span class="material-symbols-outlined">home</span>
-          <span>Home</span>
-        </a>
-      </div>
-      <div class="nav-group">
-        <a class="nav-item " href="#buscar-livros">
+        <a class="nav-item " href="usuarioHome.html">
           <span class="material-symbols-outlined">home</span>
           <span>Buscar livros</span>
         </a>
       </div>
       <div class="nav-group">
-        <a class="nav-item " href="#meus-livros">
+        <a class="nav-item active" href="usuarioHistorico.html">
           <span class="material-symbols-outlined">home</span>
           <span>Meus livros</span>
         </a>
