--- a/usuarioHome.html
+++ b/usuarioHome.html
@@ -7,7 +7,8 @@
     <title>Biblioteca</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/usuario.css">
 
 </head>
 
@@ -26,20 +27,14 @@
         <!-- menu lateral -->
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item active" href="#home">
-                    <span class="material-symbols-outlined">home</span>
-                    <span>Home</span>
-                </a>
-            </div>
-            <div class="nav-group">
-                <a class="nav-item " href="#buscar-livros">
-                    <span class="material-symbols-outlined">home</span>
+                <a class="nav-item active" href="usuarioHome.html">
+                    <span class="material-symbols-outlined">menu_book</span>
                     <span>Buscar livros</span>
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item " href="#meus-livros">
-                    <span class="material-symbols-outlined">home</span>
+                <a class="nav-item " href="usuarioHistorico.html">
+                    <span class="material-symbols-outlined">library_books</span>
                     <span>Meus livros</span>
                 </a>
             </div>
