--- a/usuarioLivroEmprestar.html
+++ b/usuarioLivroEmprestar.html
@@ -7,7 +7,8 @@
     <title>Informações do Livro</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/usuario.css">
 </head>
 
 <body class="body-color">
