--- a/usuarioLivroInformacoes.html
+++ b/usuarioLivroInformacoes.html
@@ -7,7 +7,8 @@
     <title>Informações do Livro</title>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <link rel="stylesheet" href="assets/css/menu.css">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="stylesheet" href="assets/css/usuario.css">
 </head>
 
 <body class="body-color">
@@ -25,19 +26,13 @@
         <!-- menu lateral -->
         <nav id="sidebar" class="sidebar" aria-label="Menu lateral">
             <div class="nav-group">
-                <a class="nav-item active" href="#home">
-                    <span class="material-symbols-outlined">home</span>
-                    <span>Home</span>
-                </a>
-            </div>
-            <div class="nav-group">
-                <a class="nav-item " href="#buscar-livros">
+                <a class="nav-item " href="usuarioHome.html">
                     <span class="material-symbols-outlined">home</span>
                     <span>Buscar livros</span>
                 </a>
             </div>
             <div class="nav-group">
-                <a class="nav-item " href="#meus-livros">
+                <a class="nav-item " href="usuarioHistorico.html">
                     <span class="material-symbols-outlined">home</span>
                     <span>Meus livros</span>
                 </a>
@@ -79,7 +74,7 @@
                     embarrassing hidden.
                 </div>
                 <div class="empty-space"></div>
-                <div class= "btn-container">
+                <div class="btn-container">
                     <button class="btn info-book-btn">Emprestar Livro</button>
                 </div>
             </div>
